--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,7 +5,8 @@
     position: relative;
     /* Photo by Carlos Muza on Unsplash */
      background: url('./../img/charts2.jpg') center no-repeat;
-     background-size: cover
+     background-size: cover;
+     font-family: 'Nunito', sans-serif;
 }
 #login_bttn{
     height: 50px;
@@ -23,7 +24,7 @@
     -webkit-filter: invert();
     filter: invert();
     position: absolute;
-    top: 8px;
+    top: 10px;
     left: 5px;
 }
 #login_bttn a{
@@ -33,51 +34,42 @@
     color: white;
     font-weight: bold;
     font-size: 11px;
-    top: 17px;
+    top: 20px;
+    font-family: 'Nunito', sans-serif;
 }
 #home_container{
     width: 100%;
     height: 100vh;
-    padding-top: 50px;
-    position: relative;
+    padding-top: 137px;
+    position: absolute;
+    top: 0;
 }
 #home_overlay{
     height: 100%;
     width: 100%;
     background: black;
-    opacity: 0.4;
+    opacity: 0.5;
 }
 #home_container h1{
     font-size: 50px;
     text-align: center;
+    color: white;
+    font-family: 'Nunito', sans-serif;
 }
 #about_me{
-    height: 250px;
-    width: 645px;
+    height: 120px;
+    width: 100%;
+    color: white;
+    position: relative;
+    text-align: center;
+}
+#about_me p{
+    width: 422px;
     margin-left: auto;
     margin-right: auto;
-    /* border: 1px solid black; */
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    position: relative;
-}
-/* #me_pic{
-    background: url('./../img/me.JPG') center no-repeat;
-    background-size: cover;
-    height: 150px;
-    width: 150px;
-    position: absolute;
-    left: 20px;
-    top: calc(50% - 75px)
-} */
-#about_me p{
-    width: 400px;
-    position: absolute;
-    right: 20px;
-    top: 100px;
+    margin-top: 50px;
+    line-height: 20px;
+    word-spacing: 0.5px;
+    font-family: 'Nunito', sans-serif;
 }
 
