--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -9,22 +9,22 @@
      font-family: 'Nunito', sans-serif;
 }
 #login_bttn{
-    height: 50px;
-    width: 170px;
-    background: #4885ed;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    background: #6FCDAF;
+    position: absolute;
+    top: 25px;
+    right: 30px;
 }
 #fb_icon{
     height: 30px;
     width: 30px;
-    background: url(https://maxcdn.icons8.com/Share/icon/p1em/Logos//google_logo1600.png) center no-repeat;
-    background-size: cover;
-    filter: invert();
     position: absolute;
-    top: 10px;
-    left: 5px;
+    top: calc(50% - 15px);
+    left: calc(50% - 15px);
+    background: url(https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male-512.png) center no-repeat;
+    background-size: cover;
 }
 #login_bttn a{
     position: absolute;
@@ -57,10 +57,12 @@
 }
 #about_me{
     height: 120px;
-    width: 100%;
+    width: 860px;
     color: white;
     position: relative;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 #about_me p{
     width: 422px;
